syntax = "proto3";

package grpcal;

message GetEventRequest {
  string id = 1;
}

