syntax = "proto3";

package grpcal;

message ListEventsRequest {}

